# hyperdag-core

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  METHODOLOGY.md  PATENTS.md  README-BACKUP-2026-04-26.md  README.md  create_issues.js  create_issues.ps1  output.txt  railway.toml  zkp-build.txt  zkp-errors.txt
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
docs/: ARCHITECTURE.md  BENCHMARK_RESULTS.md  CIRCUITS.md  CUSTODIAN_ACCOUNTABILITY.md  PRODUCTION_DATA.md  PROVER-API.md  RED_TEAM_RESULTS.md  VERIFIER-API.md  ZKP-BENCHMARK-2026-04-27.md  ZKP-CIRCUIT-AUDIT-2026-04-27.md
migrations/: 2026-06-08-zkp-circuits-domain.sql  2026-06-10-zkp-circuits-envelope-domain.sql  202604232359_agent_custodianship.sql
rust-brain/: Cargo.toml  Dockerfile
rust-brain/src/: anfis_router.rs  bft_consensus.rs  main.rs  pythagorean_comma.rs  task_queue.rs
services/babybear-leaf/: Cargo.toml
services/babybear-leaf/test-vectors/: poseidon2_babybear_kat_v1.json
services/babybear-leaf/tests/: kat.rs
services/zkp-postcard/: .gitignore  Cargo.toml  Dockerfile  Procfile  check.txt  check_utf8.txt  nixpacks.toml  railway.json  railway.toml
services/zkp-postcard/babybear-leaf/src/: lib.rs
services/zkp-postcard/docs/: OBSERVABILITY.md
services/zkp-postcard/src/: aggregate.rs  circuit.rs  corpus.rs  envelope.rs  epoch.rs  letter.rs  lib.rs  main.rs  package.rs  recursion_spike.rs  variants.rs
services/zkp-postcard/test_vectors/: corpus.json
services/zkp-postcard/tests/: combined_repid_test.rs  earned_repid_test.rs  linked_bet_test.rs  onchain_verifier_test.rs  perceived_repid_test.rs  repid_threshold_test.rs  trade_auth_test.rs  vectors_test.rs
test-vectors/: repid-threshold-v0.1.json  reponomics-anti-gaming-v0.1.json
