[package]
name = "zkp-postcard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zkp-postcard"
path = "src/main.rs"

[dependencies]
# Plonky3 — pinned to canonical rev 27d59f73 (CANON P-026 / ZKP_INVARIANTS Inv 5)
p3-field = { git = "https://github.com/Plonky3/Plonky3", rev = "27d59f7350daf6b02d11b01c3a55af453554b515" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3", rev = "27d59f7350daf6b02d11b01c3a55af453554b515" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3", rev = "27d59f7350daf6b02d11b01c3a55af453554b515" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3", rev = "27d59f7350daf6b02d11b01c3a55af453554b515" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3", rev = "27d59f7350daf6b02d11b01c3a55af453554b515" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3", rev = "27d59f7350daf6b02d11b01c3a55af453554b515" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3", rev = "27d59f7350daf6b02d11b01c3a55af453554b515" }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3", rev = "27d59f7350daf6b02d11b01c3a55af453554b515" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3", rev = "27d59f7350daf6b02d11b01c3a55af453554b515" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3", rev = "27d59f7350daf6b02d11b01c3a55af453554b515" }
p3-air = { git = "https://github.com/Plonky3/Plonky3", rev = "27d59f7350daf6b02d11b01c3a55af453554b515" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3", rev = "27d59f7350daf6b02d11b01c3a55af453554b515" }
p3-monty-31 = { git = "https://github.com/Plonky3/Plonky3", rev = "27d59f7350daf6b02d11b01c3a55af453554b515" }

# Standard deps
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
bincode = "1.3"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
# B-2: Poseidon2/BabyBear leaf (Invariant 1) — aggregation-ready commitment for NEW proofs.
# VENDORED inside the crate dir (not `../babybear-leaf`) so the leaf is INSIDE the Railway
# Docker build context (Root Directory = services/zkp-postcard). A sibling path dep was
# unreachable from the build context → "failed to read /babybear-leaf/Cargo.toml" build
# failure (2026-06-11). Still the canonical, KAT-tested leaf crate, same Plonky3 pin 27d59f7350.
babybear-leaf = { path = "babybear-leaf" }
# B-2 LETTER hiding (HidingFriPcs): salt + random-codeword entropy for the zero-knowledge proof.
# (SmallRng is unconditional in rand 0.10; default features provide OS seeding via make_rng.)
rand = "0.10"
